// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`services.communicationTemplate DB related tests finds the accountTemplate for a given accountId and templateName 1`] = `
Object {
  "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
  "id": "4486edfc-7e4f-464f-8fe7-a38bb6a37a52",
  "templateId": "1486edfc-7e4f-464f-8fe7-a38bb6a37a52",
  "value": "Personalized template for \${name}, \${age}.",
}
`;

exports[`services.communicationTemplate DB related tests finds the accountTemplate for a given accountId and templateName 2`] = `
Object {
  "id": "1486edfc-7e4f-464f-8fe7-a38bb6a37a52",
  "templateName": "test-template-1",
  "values": Object {
    "age": true,
    "name": true,
  },
}
`;

exports[`services.communicationTemplate DB related tests returns the default accountTemplate if account specific template is not found 1`] = `
Object {
  "accountId": null,
  "id": "2486edfc-7e4f-464f-8fe7-a38bb6a37a52",
  "templateId": "0486edfc-7e4f-464f-8fe7-a38bb6a37a52",
  "value": "Great One \${name}",
}
`;

exports[`services.communicationTemplate DB related tests returns the default accountTemplate if account specific template is not found 2`] = `
Object {
  "id": "0486edfc-7e4f-464f-8fe7-a38bb6a37a52",
  "templateName": "test-template",
  "values": Object {
    "name": true,
  },
}
`;

exports[`services.communicationTemplate template compiler validates template params 1`] = `
Object {
  "age": 22,
  "name": "Donna",
}
`;

exports[`services.communicationTemplate template compiler validates template params for object childs 1`] = `
Object {
  "age": 22,
  "name": "Donna",
  "patient.firstName": "Mike",
}
`;
